--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <p id="loader">Loading...</p>
+    <p id="loader"> WELCOME  PLEACE  WAIT ...</p>
     <div class="wrapper" id="wrapper"></div>
 
     <script src="index.js"></script>
