--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <p id="loader"> WELCOME  PLEACE  WAIT ...</p>
+    <p id="loader"> Hello, welcome, this site provides a brief description of all republics
+    </p>
     <div class="wrapper" id="wrapper"></div>
 
     <script src="index.js"></script>
